# threatail-node

./: .gitignore  .gitleaks.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  config.example.json  docker-compose.yml  preflight.sh
.github/workflows/: ci.yml
deploy/k8s/: 01-namespace.yaml  02-configmap.yaml  03-deployment.yaml  04-service.yaml
docs/: README.md  anomaly.md  api-protection.md  architecture.md  certificates.md  configuration.md  custom-rules.md  deployment-docker.md  deployment-kubernetes.md  prometheus-grafana.md  supervised-model.md  threat-score.md
ml/: Dockerfile.trainer  FEATURES.md  MODEL_FORMAT.md  README.md  datasets.py  docker-compose.trainer.yml  expert_seed.py  features.py  synth.py  train.py  trainer_service.py
src/: anomaly.rs  apisec.rs  ato.rs  attack.rs  behavior.rs  bot.rs  cache.rs  central.rs  challenge.rs  clickhouse.rs  cloud.rs  config.rs  default_model.json  dlp.rs  features.rs  fpfeed.rs  geo.rs  golden.json  i18n.rs  ipban.rs  iprep.rs  jwks.rs  main.rs  metrics.rs  mlmodel.rs  netutil.rs  openapi.rs  ratelimit.rs  siginj.rs  tls.rs  tlsfp.rs  verbot.rs  verdict.rs
